PDFBOX-5984: avoid NPE
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/1.8@1924995 13f79535-47bb-0310-9956-ffa450edef68